# ROS_learn

./: .gitignore  README.md
nodes/: ros2_python_node.py
nodes/cpp_node/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  cpp_node  ros2_node_cpp.cpp
nodes/cpp_node/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
nodes/demo_python_pkg/: package.xml  setup.py
nodes/demo_python_pkg/demo_python_pkg/: python_node.py
robot_description/: CMakeLists.txt
robot_description/config/: display_robot_model.rviz
robot_description/robot_description/urdf/mybot/: base.urdf.xacro  common_inertial.xacro
robot_description/urdf/: first_robot.xacro
robot_description/urdf/mybot/: base.urdf.xacro  mybot.urdf.xacro
robot_description/urdf/mybot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
robot_description/urdf/mybot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
robot_make/src/robot_description/: CMakeLists.txt  package.xml
robot_make/src/robot_description/config/: mybot_ros2_controller.yaml
robot_make/src/robot_description/launch/: gazebo_sim.lauch.py
robot_make/src/robot_description/world/: custom_room.world
server_client/src/custom_api/: CMakeLists.txt  package.xml
server_client/src/custom_api/srv/: FaceDetector.srv  ParTol.srv
server_client/src/python_service/: package.xml  setup.cfg  setup.py
tf/src/demo_cpp_tf/: CMakeLists.txt  package.xml
tf/src/tf_demo_python/: package.xml  setup.cfg  setup.py
topic_learn/: book1.txt  book2.txt  book3.txt
(+42 files in other folders)
